--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate --no-engine"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@prisma/extension-accelerate": "^0.6.3",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.10",
+    "axios": "^1.6.7",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
+    "prisma": "^5.9.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "roblox-provider": "^1.0.19",
+    "vercel": "^33.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
