--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@prisma/client": "^5.9.1",
     "@prisma/extension-accelerate": "^0.6.3",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.7",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
-    "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
     "roblox-provider": "^1.0.19",
