--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "prisma generate --no-engine"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.9.1",
     "@prisma/extension-accelerate": "^0.6.3",
