--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/core": "^0.27.0",
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.1",
@@ -17,11 +19,13 @@
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.7",
-    "next": "14.1.0",
-    "next-auth": "^4.24.6",
+    "next": "^14.1.0",
+    "next-auth": "^5.0.0-beta.11",
+    "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
     "roblox-provider": "^1.0.19",
+    "uninstall": "^0.0.0",
     "vercel": "^33.5.1"
   },
   "devDependencies": {
