--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "author": "Zeke Pari",
+  "description": "RoLinker full-stack application for linking Roblox and Discord accounts",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "register-commands": "tsx ./scripts/register-commands"
   },
   "dependencies": {
     "@auth/core": "^0.27.0",
+    "@auth/prisma-adapter": "^1.4.0",
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.1",
@@ -19,12 +23,15 @@
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.7",
+    "discord-api-types": "^0.37.70",
+    "dotenv": "^16.4.4",
     "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.11",
     "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
     "roblox-provider": "^1.0.19",
+    "tweetnacl": "^1.0.3",
     "uninstall": "^0.0.0",
     "vercel": "^33.5.1"
   },
