--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
+    "roblox-api-types": "^0.0.1",
     "tsx": "^4.7.1",
     "tweetnacl": "^1.0.3",
     "uninstall": "^0.0.0",
