--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "private": true,
   "author": "Zeke Pari",
   "description": "RoLinker full-stack application for linking Roblox and Discord accounts",
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@auth/core": "^0.27.0",
-    "@auth/prisma-adapter": "^1.4.0",
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.1",
@@ -32,7 +31,6 @@
     "roblox-api-types": "^0.1.1",
     "tsx": "^4.7.1",
     "tweetnacl": "^1.0.3",
-    "uninstall": "^0.0.0",
     "vercel": "^33.5.1"
   },
   "devDependencies": {
@@ -43,6 +41,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
