--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.27.0",
+    "@discordjs/rest": "^2.2.0",
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.1",
@@ -21,7 +22,7 @@
     "@prisma/extension-accelerate": "^1.0.0",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.10",
-    "discord-api-types": "^0.37.71",
+    "discord-api-types": "^0.37.73",
     "dotenv": "^16.4.4",
     "next": "^14.1.1",
     "next-auth": "^5.0.0-beta.11",
