--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "roblox-api-types": "^0.1.1",
+    "swr": "^2.2.5",
     "tsx": "^4.7.1",
     "tweetnacl": "^1.0.3",
     "vercel": "^33.5.1"
