--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.11.0",
     "@prisma/extension-accelerate": "^1.0.0",
+    "@stripe/stripe-js": "^3.2.0",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.10",
     "discord-api-types": "^0.37.73",
