--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.11.0",
     "@prisma/extension-accelerate": "^1.0.0",
-    "@stripe/stripe-js": "^3.2.0",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.10",
     "discord-api-types": "^0.37.73",
     "dotenv": "^16.4.4",
-    "next": "^14.1.1",
+    "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.11",
     "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
     "roblox-api-types": "^0.1.1",
+    "stripe": "^15.5.0",
     "swr": "^2.2.5",
     "tsx": "^4.7.1",
     "tweetnacl": "^1.0.3",
