--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "@vercel/analytics": "^1.1.3",
+    "cryptr": "^6.3.0",
     "discord-api-types": "^0.37.73",
     "dotenv": "^16.4.4",
     "next": "^14.2.3",
