--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "@vercel/analytics": "^1.1.3",
+    "bloxy": "^5.8.0",
     "cryptr": "^6.3.0",
     "discord-api-types": "^0.37.73",
     "dotenv": "^16.4.4",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.11",
+    "noblox.js": "^4.15.1",
     "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
