--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^15.5.0",
+    "swr": "^2.2.5",
     "tsx": "^4.7.1",
     "tweetnacl": "^1.0.3",
     "vercel": "^33.5.1"
