--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "swr": "^2.2.5",
     "tsx": "^4.7.1",
     "tweetnacl": "^1.0.3",
-    "vercel": "^33.5.1"
+    "vercel": "^33.5.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
