--- a/package.json
+++ b/package.json
@@ -20,21 +20,31 @@
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.11.0",
     "@prisma/extension-accelerate": "^1.0.0",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "@vercel/analytics": "^1.1.3",
     "bloxy": "^5.8.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cryptr": "^6.3.0",
     "discord-api-types": "^0.37.73",
     "dotenv": "^16.4.4",
     "got": "^11.8.2",
+    "lucide-react": "^0.381.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.11",
+    "next-themes": "^0.3.0",
     "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^15.5.0",
     "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.1",
     "tweetnacl": "^1.0.3",
     "vercel": "^33.5.1",
