--- a/package.json
+++ b/package.json
@@ -20,15 +20,10 @@
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.11.0",
     "@prisma/extension-accelerate": "^1.0.0",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-slot": "^1.0.2",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "@vercel/analytics": "^1.1.3",
     "bloxy": "^5.8.0",
-    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cryptr": "^6.3.0",
     "discord-api-types": "^0.37.73",
@@ -51,10 +46,12 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.11.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
