--- a/package.json
+++ b/package.json
@@ -6,21 +6,44 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "register-commands": "tsx ./scripts/register-commands"
   },
   "dependencies": {
+    "@discordjs/rest": "^2.3.0",
+    "@prisma/client": "^5.14.0",
+    "@prisma/extension-accelerate": "^1.1.0",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
+    "@tailwindcss/typography": "^0.5.13",
+    "bloxy": "^5.8.0",
+    "clsx": "^2.1.1",
+    "discord-api-types": "^0.37.86",
+    "dotenv": "^16.4.5",
+    "got": "^11.8.2",
+    "lucide-react": "^0.383.0",
+    "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "stripe": "^15.8.0",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "daisyui": "^4.11.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "prettier": "^3.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.1",
+    "prisma": "^5.14.0",
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.11.2",
+    "typescript": "^5"
   }
 }
